tests/baselines/reference/augmentedTypesEnum3.errors.txt
==== tests/cases/compiler/augmentedTypesEnum3.ts (1 errors) ====
    module E {
        var t;
    }
    enum E { }
    
    enum F { }
    module F { var t; }
    
    module A {
        var o;
    }
    enum A {
        b
    }
    enum A {
        c
        ~
!!! augmentedTypesEnum3.ts(16,5): error TS4024: In enums with multiple declarations only one declaration can omit an initializer for the first enum element.
    }
    module A {
        var p;
    }